SFEIs connection (continuation)