@@ -1,5 +1,7 @@
 package viewers.controllers.SFEM;
 
+import com.sun.javafx.scene.shape.ArcHelper;
+import controllers.transport.cSFEM_transport;
 import javafx.beans.property.DoubleProperty;
 import javafx.beans.property.SimpleDoubleProperty;
 import javafx.fxml.FXML;
@@ -7,13 +9,16 @@ import javafx.fxml.FXMLLoader;
 import javafx.scene.Cursor;
 import javafx.scene.Node;
 import javafx.scene.control.*;
-import javafx.scene.input.KeyCode;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.Pane;
 import javafx.scene.shape.Line;
+import models.SFEx_particular.SFEM_transport;
+import org.apache.commons.math3.util.Pair;
+import utility.serialize.serializer;
 import viewers.controllers.C_ShopFloor;
+import viewers.controllers.SFEE.C_SFEE_transport;
 import viewers.controllers.SFEE.C_SFEEs;
 import viewers.controllers.SFEI.C_SFEI_conveyor;
 import viewers.controllers.SFEI.C_SFEI_machine;
@@ -34,10 +39,10 @@ public class C_SFEM_connection {
     private Pane sfem_transport_pane;
 
     @FXML
-    private Tooltip connectBtn;
+    private Tooltip connectionBtnTooltip;
 
     @FXML
-    private Button drawConnection;
+    private Button connectionBtn;
     @FXML
     private TextField sfem_transport_name;
 
@@ -75,25 +80,47 @@ public class C_SFEM_connection {
                 }
             }
             if (clickedNodes.size() == 2) {
-                System.out.println("Create connection with " + clickedNodes.get(0).getId() + " " + clickedNodes.get(1).getId());
-                String sfemName_empty = "SFEM_transport name" + C_ShopFloor.getInstance().getcSfemTransports().size();
-
                 try {
-                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/SFEE/SFEE_transport.fxml"));
-                    C_SFEM_transport cSfemTransport = new C_SFEM_transport(sfemName_empty, clickedNodes.get(0).getId(), clickedNodes.get(1).getId());
-                    C_ShopFloor.getInstance().getcSfemTransports().add(C_ShopFloor.getInstance().getcSfemTransports().size(), cSfemTransport);
-//                    loader.setController(C_ShopFloor.getInstance().getcSfemTransports().get(C_ShopFloor.getInstance().getcSfemTransports().size() - 1));
+                    System.out.println("Create connection with " + clickedNodes.get(0).getId() + " " + clickedNodes.get(1).getId());
+
+                    // Detect if it is a new connection or an existing one
+                    boolean existing_conection = false;
+                    for (C_SFEM_transport cSfemTransport : C_ShopFloor.getInstance().getcSfemTransports()) {
+                        Pair<Pair<String, String>, Pair<String, String>> pair = cSfemTransport.getcSFEMTransport().getSfeeTransportController().prevNextSFEE();
+                        if (pair.getFirst().getSecond().equals(clickedNodes.get(0).getId())) {
+                            C_ShopFloor.getInstance().setCurrent_C_SFEMTransport(cSfemTransport);
+                            existing_conection = true;
+                            break;
+                        }
+                        if (pair.getSecond().getSecond().equals(clickedNodes.get(0).getId())) {
+                            C_ShopFloor.getInstance().setCurrent_C_SFEMTransport(cSfemTransport);
+                            existing_conection = true;
+                            break;
+                        }
+                    }
+
+                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/SFEM/SFEM_transport.fxml"));
+                    C_SFEM_transport cSfemTransport;
+                    if (!existing_conection) {
+                        String sfemName_empty = "SFEM_transport name" + C_ShopFloor.getInstance().getcSfemTransports().size();
+                        cSfemTransport = new C_SFEM_transport(sfemName_empty, clickedNodes.get(0).getId(), clickedNodes.get(1).getId());
+                        C_ShopFloor.getInstance().getcSfemTransports().add(C_ShopFloor.getInstance().getcSfemTransports().size(), cSfemTransport);
+                        C_ShopFloor.getInstance().setCurrent_C_SFEMTransport(cSfemTransport);
+                        sfem_transport_name.setVisible(true);
+                        sfem_transport_name.setText(sfemName_empty);
+                    } else {
+                        cSfemTransport = C_ShopFloor.getInstance().getCurrent_C_SFEMTransport();
+                        sfem_transport_name.setVisible(true);
+                        sfem_transport_name.setText(cSfemTransport.getSfemName());
+                    }
                     loader.setController(cSfemTransport);
                     AnchorPane pane = loader.load();
                     sfem_transport_pane.getChildren().setAll(pane);
-
-                    C_ShopFloor.getInstance().setCurrent_C_SFEMTransport(cSfemTransport);
-//                    clickedNodes.clear();
-
+                    connectionBtn.setText("Connect");
+                    connectionBtn.setVisible(true);
                 } catch (Exception e) {
                     e.printStackTrace();
                 }
-
             }
         });
 
@@ -111,17 +138,12 @@ public class C_SFEM_connection {
             }
         });
 
-        sfem_transport_name.setOnKeyPressed(keyEvent -> {
-            if (keyEvent.getCode().equals(KeyCode.ENTER)) {
-                C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().setSfemName(sfem_transport_name.getText());
-            }
-        });
 
         drawSFEM_elements();
         // Draw all loaded connections
         drawExistingConnections();
 
-        drawConnection.setOnMouseClicked(event -> drawConnectionLine(false));
+        connectionBtn.setOnMouseClicked(event -> drawConnectionLine(false));
 
     }
 
@@ -133,29 +155,39 @@ public class C_SFEM_connection {
             String nextSFEI = cSfemTransport.getcSFEMTransport().getSfeeTransportController().getNextSFEI_name();
 
             // search node by its name
-            for (Node node : canvasWrapper.getChildren()) {
-                if (node instanceof MyRectangle) {
-                    if (node.getId().equals(prevSFEI)) {
-                        clickedNodes.add(0, node);
-                        break;
-                    }
-                }
-            }
+            clickedNodes.add(0, searchNodeById(prevSFEI));
+            clickedNodes.add(1, searchNodeById(nextSFEI));
 
-            for (Node node : canvasWrapper.getChildren()) {
-                if (node instanceof MyRectangle) {
-                    if (node.getId().equals(nextSFEI)) {
-                        clickedNodes.add(1, node);
-                        break;
-                    }
-                }
-            }
             drawConnectionLine(true);
         }
     }
 
+    private Node searchNodeById(String id) {
+        Node retNode = null;
+        for (Node node : canvasWrapper.getChildren()) {
+            if (node instanceof MyRectangle) {
+                if (node.getId().equals(id)) {
+                    retNode = node;
+                    break;
+                }
+            }
+        }
+        if (retNode == null)
+            throw new RuntimeException("Node " + id + " not found in canvasWrapper!");
+        return retNode;
+    }
+
     private void drawConnectionLine(boolean setup) {
-        if (setup || C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().validateMoveOn()) {
+        if (setup || !C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().validateMoveOn()) {
+
+            if (!setup) {
+                if (!C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getcSfeeTransport().getInSFEI_name().getText().equals(clickedNodes.get(0).getId())) {
+                    // Swap order
+                    Node temp = clickedNodes.remove(0);
+                    clickedNodes.add(1, temp);
+                }
+                create_cSFEM_transport();
+            }
 
             MyRectangle inRectangle = (MyRectangle) clickedNodes.get(0);
             MyRectangle outRectangle = (MyRectangle) clickedNodes.get(1);
@@ -169,23 +201,38 @@ public class C_SFEM_connection {
             Anchor end = new Anchor(outRectangle, endX, endY, false);
 
             Line line = new boundLine(startX, startY, endX, endY);
-            line.setId(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getSfemName());
-
+            if (setup) {
+                line.setId(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getSfemName());
+            } else {
+                line.setId(sfem_transport_name.getText());
+            }
             line.setCursor(Cursor.HAND);
 
             line.setOnMouseClicked(event -> {
                 Node node = (Node) event.getTarget();
+                System.out.println("Clicked node: " + node.getId());
                 try {
-                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/SFEE/SFEE_transport.fxml"));
+                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/SFEM/SFEM_transport.fxml"));
+                    // Search for an existing connection
                     for (C_SFEM_transport temp : C_ShopFloor.getInstance().getcSfemTransports()) {
                         if (node.getId().equals(temp.getSfemName())) {
+                            System.out.println("EDIT MODE ON!");
                             C_ShopFloor.getInstance().setCurrent_C_SFEMTransport(temp);
+                            C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().setEditMode(true);
+/*                            clickedNodes.clear();
+                            clickedNodes.add(0, searchNodeById(temp.getcSfeeTransport().getInSFEI()));
+                            clickedNodes.add(1, searchNodeById(temp.getcSfeeTransport().getOutSFEI()));*/
                             break;
                         }
                     }
+                    System.out.println(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getSfemName());
                     loader.setController(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport());
                     AnchorPane pane = loader.load();
                     sfem_transport_pane.getChildren().setAll(pane);
+                    sfem_transport_name.setVisible(true);
+                    connectionBtn.setText("Update");
+                    connectionBtn.setVisible(true);
+                    sfem_transport_name.setText(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getSfemName());
                 } catch (Exception e) {
                     e.printStackTrace();
                 }
@@ -193,21 +240,51 @@ public class C_SFEM_connection {
             });
 
             canvasWrapper.getChildren().add(line);
-
             build_pane.setContent(canvasWrapper);
             clickedNodes.clear();
-            Tooltip.uninstall(drawConnection, connectBtn);
-            // Disable visible elements
-            sfem_transport_name.setVisible(false);
-            drawConnection.setVisible(false);
+            if (!setup) {
+                Tooltip.uninstall(connectionBtn, connectionBtnTooltip);
+                // Disable visible elements
+                sfem_transport_name.setVisible(false);
+                connectionBtn.setVisible(false);
+                sfem_transport_pane.getChildren().clear();
 
-            // create SFEI_transport in C_SFEI_transport !!!
+                C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().setEditMode(false);
+                C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().setSfemName(sfem_transport_name.getText());
 
+            }
         } else {
-            connectBtn.setText(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getErrorMsg());
-            Tooltip.install(drawConnection, connectBtn);
+            connectionBtnTooltip.setText(C_ShopFloor.getInstance().getCurrent_C_SFEMTransport().getErrorMsg());
+            Tooltip.install(connectionBtn, connectionBtnTooltip);
         }
 
+    }
+
+    private void create_cSFEM_transport() {
+
+        C_SFEM_transport cSfemTransport = C_ShopFloor.getInstance().getCurrent_C_SFEMTransport();
+
+        ArrayList<Object> data = new ArrayList<>();
+        data.add(0, sfem_transport_name.getText());  // SFEM_transport name
+        data.add(1, cSfemTransport.getcSfeeTransport().getSfee_transport_name().getText()); // SFEE_transport name
+
+        ArrayList<Object> initController_data = new ArrayList<>();
+        initController_data.add(0, "sfei_of_" + cSfemTransport.getcSfeeTransport().getSfee_transport_name().getText()); // SFEI_transport name
+        initController_data.add(1, null);   // inSFEE modbus connection
+        initController_data.add(2, null);   // outSFEE modbus connection
+        initController_data.add(3, null);   // inSFEE  -> TO BE FOUND in serializer class
+        initController_data.add(4, null);   // outSFEE -> TO BE FOUND in serializer class
+        initController_data.add(5, cSfemTransport.getcSfeeTransport().getInSFEI());     // string value -> search in serializer class
+        initController_data.add(6, cSfemTransport.getcSfeeTransport().getOutSFEI());    // string value -> search in serializer class
+
+        initController_data.addAll(cSfemTransport.getcSfeeTransport().getC_SFEI_Transport().getSensAct());
+
+        ArrayList<Object> init_OperationMode_data = new ArrayList<>(cSfemTransport.getcSfeeTransport().getFormulaSplitted());
+
+        data.addAll(initController_data);
+        data.addAll(init_OperationMode_data);
+
+        serializer.getInstance().new_cSFEM_transport(data);
     }
 
     class Anchor extends MyRectangle {
@@ -216,7 +293,6 @@ public class C_SFEM_connection {
             x.bind(myRectangle.layoutXProperty().add(input ? myRectangle.getRectangle().getWidth() / 2 : -myRectangle.getRectangle().getWidth() / 2));
             y.bind(myRectangle.layoutYProperty());
         }
-
     }
 
     private double Rwidth = 100.0;
@@ -226,16 +302,12 @@ public class C_SFEM_connection {
     private double yPos = 35.0;
 
 
-    private void drawSFEM_elements(/*ObservableList<Integer> *//*int selectedIndices*/) {
-
-
+    private void drawSFEM_elements() {
         for (C_SFEM_production cSfem : C_ShopFloor.getInstance().getcSfemProductions()) {
             for (C_SFEEs cSfees : cSfem.getSfeesControllers()) {
                 for (C_SFEI_conveyor cSfeiConveyor : cSfees.getItems().getSfeisController().getSfeiConveyors()) {
                     MyRectangle rectangle = new MyRectangle(cSfeiConveyor.getSfeiConveyor().getName(), Rwidth, Rheight);
 
-//                    rectangle.setTranslateX(xPos);
-//                    rectangle.setTranslateY(yPos);
                     rectangle.setLayoutX(xPos);
                     rectangle.setLayoutY(yPos);
 
@@ -245,21 +317,16 @@ public class C_SFEM_connection {
                 for (C_SFEI_machine cSfeiMachine : cSfees.getItems().getSfeisController().getSfeiMachines()) {
                     MyRectangle rectangle = new MyRectangle(cSfeiMachine.getSfeiMachine().getName(), Rwidth / 2, Rheight);
 
-//                    rectangle.setTranslateX(xPos);
-//                    rectangle.setTranslateY(yPos);
                     rectangle.setLayoutX(xPos);
                     rectangle.setLayoutY(yPos);
 
                     canvasWrapper.getChildren().add(rectangle);
                     xPos += 15.0 + Rwidth / 2;
-
                 }
                 xPos = 60.0;
                 yPos += 15.0 + Rheight;
             }
         }
         build_pane.setContent(canvasWrapper);
-
     }
-
 }
